--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -7,5 +7,7 @@ roles:
 collections:
   - name: community.general
     source: https://galaxy.ansible.com/
-  - name: community.kubevirt.kubevirt_vm
+  - name: containers.podman
+    source: https://galaxy.ansible.com/
+  - name: ansible.posix
     source: https://galaxy.ansible.com/
