--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -4,3 +4,5 @@ collections:
     source: https://galaxy.ansible.com/
   - name: community.kubevirt
     source: https://galaxy.ansible.com/
+  - name: community.kubernetes
+    source: https://galaxy.ansible.com/
