--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -6,5 +6,5 @@ collections:
     source: https://galaxy.ansible.com/
   - name: community.kubernetes
     source: https://galaxy.ansible.com/
-  - name: ansible-galaxy kubevirt.kubevirt-modules
+  - name: kubevirt.kubevirt-modules
     source: https://galaxy.ansible.com/
