--- a/vm_creator.yml
+++ b/vm_creator.yml
@@ -7,6 +7,7 @@
       kubevirt_vm:
         api_key: "{{ kv_vm_api_token }}"
         state: running
+        validate_certs: false
         name: "{{ kv_vm_name }}"
         host: "{{ kv_vm_host }}"
         namespace: "{{kv_vm_namespace}}"
