--- a/vm_creator.yml
+++ b/vm_creator.yml
@@ -9,7 +9,7 @@
         api_key: '{{ kv_api_token }}'
         validate_certs: false
         host: '{{ kv_vm_host }}'
-        name: "{{ item }}"-pvc
+        name: "{{ item }}-pvc'
         namespace: '{{ kv_vm_namespace }}'
         size: 10Gi
         access_modes:
