--- a/vm_creator.yml
+++ b/vm_creator.yml
@@ -6,18 +6,18 @@
   tasks:
     - name: Creating PVC
       kubevirt_pvc:
-        api_key: '{{ kv_api_token }}'
+        api_key: "{{ kv_api_token }}"
         validate_certs: false
-        host: '{{ kv_vm_host }}'
-        name: "{{ item }}-pvc"
-        namespace: '{{ kv_vm_namespace }}'
+        host: "{{ kv_vm_host }}"
+        name: "{{ kv_vm_name }}-pvc"
+        namespace: '{{ kv_vm_namespace | default('im-acme-project01') }}'
         size: 10Gi
         access_modes:
           - ReadWriteOnce
         cdi_source:
           http:
             url: '{{ kv_vm_qcow_url }}'
-      with_sequence: start=0 end="{{ kv_vm_number }}" format="{{ kv_vm_name }}%02d"
+#      with_sequence: start=0 end="{{ kv_vm_number }}" format="{{ kv_vm_name }}%02d"
       
     - name: Creating the VM
       kubevirt_vm:
@@ -27,7 +27,7 @@
         host: "{{ kv_vm_host }}"
         validate_certs: false
         namespace: "{{ kv_vm_namespace }}"
-        name: "{{ item }}"
+        name: "{{ kv_vm_name }}"
         cpu_cores: "{{ kv_cpu_cores }}"
         memory: "{{ kv_vm_memory }}"
         disks:
@@ -35,7 +35,7 @@
             name: root-disk
             volume:
               persistentVolumeClaim:
-                claimName: "{{ item }}-pvc"
+                claimName: "{{ kv_vm_name }}-pvc"
               name: root-disk
             disk:
               bus: virtio
@@ -46,4 +46,4 @@
             chpasswd: { expire: False }
             ssh_authorized_keys:
               - "{{ kv_ssh_auth_key }}"
-        with_sequence: start=0 end="{{ kv_vm_number }}" format="{{ kv_vm_name }}%02d"
+#        with_sequence: start=0 end="{{ kv_vm_number }}" format="{{ kv_vm_name }}%02d"
