--- a/vm_creator.yml
+++ b/vm_creator.yml
@@ -43,7 +43,8 @@
             #cloud-config
             password: "{{ kv_ssh_password }}"
             chpasswd: { expire: False }
+            bootcmd:
+              - "{{ kv_vm_command }}"
             ssh_authorized_keys:
               - "{{ kv_ssh_auth_key }}"
-          userDataBase64: "{{ kv_vm_command | b64encode }}"
       with_sequence: start=1 end="{{ kv_vm_number }}" format="{{ kv_vm_name }}%02d"
