--- a/haproxy_tasks_backend.yml
+++ b/haproxy_tasks_backend.yml
@@ -4,7 +4,7 @@
   hosts: all
   tasks:
   - name: Haproxy backend tasks
-    community.general.haproxy:
+    haproxy:
       state: "{{ haproxy_backend_status }}" #drain, enable, disable
       host: "{{ haproxy_backend_host }}" #jws-app-01
       backend: "{{ haproxy_backend_name }}" #webservers
